--- a/rostermanager/templates/rostermanager/roster.html
+++ b/rostermanager/templates/rostermanager/roster.html
@@ -17,7 +17,7 @@
 
 
 {% block content %}
-<h2 id="roster-heading">Roster (All Seasons)</h2> <!-- Need to make this something that can be updated -->
+<h2 id="roster-heading">Roster</h2> <!-- Need to make this something that can be updated -->
 
 <a href="{% url 'createplayer' %}"><span class="material-symbols-outlined">
     add
