--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
         <a href="{% url 'add_season' %}">New Season</a>
         <a href="{% url 'roster' %}">Rosters</a>
         <a href="{% url 'lineup' %}">Lineup</a>
-        <a href="{% url 'view_notes' %}">Notes</a>
+        <a href="{% url 'roster_notes' %}">Notes</a>
 
         
         {% if user.is_authenticated %}
