--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,7 @@
 
 {% block head %}
 <title>Hockey Manager - Home</title>
+<link rel="stylesheet" href="{% static 'game/game_style.css' %}">
 {% endblock %}
 
 
