--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,7 +4,7 @@
 
 {% block head %}
 <title>Hockey Manager - Sign Up</title>
-<!--<link rel="stylesheet" href="{% static 'workouttracker/style.css' %}">-->
+<link rel="stylesheet" href="{% static 'game/game_style.css' %}">
 {% endblock %}
 
 {% block content %}
