--- a/rostermanager/templates/rostermanager/add_player.html
+++ b/rostermanager/templates/rostermanager/add_player.html
@@ -1,4 +1,13 @@
-{% extends 'base.html' %} {% load static %} {% block content %}
+{% extends 'base.html' %}
+{% load static %}
+
+{% block head %}
+<title>Hockey Manager - Add Player</title>
+<link rel="stylesheet" href="{% static 'rostermanager/style.css' %}">
+{% endblock %}
+
+
+{% block content %}
 <h2>Add a New Player</h2>
 <form method="post">
   {% csrf_token %}
