--- a/rostermanager/templates/rostermanager/update_player.html
+++ b/rostermanager/templates/rostermanager/update_player.html
@@ -1,4 +1,13 @@
-{% extends 'base.html' %} {% load static %} {% block content %}
+{% extends 'base.html' %} 
+{% load static %}
+
+{% block head %}
+<title>Hockey Manager - Update Player</title>
+<link rel="stylesheet" href="{% static 'rostermanager/style.css' %}">
+{% endblock %}
+
+
+{% block content %}
 <h2>Update Player</h2>
 <form method="post">
     {% csrf_token %}
